# templates

./: GEMINI.md  README.md
adk/: .gitignore  AGENTS.md  README.md  README_TEMPLATE.md  devserver.sh  idx-template.json  idx-template.nix  llms-full.txt  refresh_context.sh  refresh_context_with_gemini_cli.sh  requirements.txt
angular/: dev.nix  idx-template.json  idx-template.nix
astro/: devNix.j2  idx-template.json  idx-template.nix
blank-nix/: idx-template.json  idx-template.nix
blank-web/: idx-template.json  idx-template.nix
cpp/: idx-template.json  idx-template.nix
cpp/app/: CMakeLists.txt  Dockerfile  README.md  cloud_run_hello.cc  docker-compose.yml  vcpkg.json
cpp/app/.idx/: airules.md  dev.nix
dart/: idx-template.json  idx-template.nix
data-connect/: README.md  dev.nix  idx-template.json  idx-template.nix
dotnet/: devNix.j2  idx-template.json  idx-template.nix
eleventy/: dev.nix  idx-template.json  idx-template.nix
elixir/: dev.nix  idx-template.json
gemini/: idx-template.json  idx-template.nix
gemini-maps/: README.md  idx-template.json  idx-template.nix
genkit/: .gitignore  README.md  dev.nix  idx-template.json  idx-template.nix  index.ts  initial-data.ts  package-lock.json  package.json  schema.ts  tools.ts
go/: idx-template.json  idx-template.nix
htmx/: idx-template.json  idx-template.nix
java/: idx-template.json  idx-template.nix
laravel/: dev.nix  idx-template.json  idx-template.nix
lit-vite/: dev.nix  (+2 more)
python-flask/poetry/web/: README.md  devserver.sh  pyproject.toml
python-flask/poetry/web/src/: index.html  main.py
(+385 files in other folders)
